inserisci proprietà shrink

--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@
 #main {
     width:85%;
     background-color: yellow;
+    flex-shrink: 1;
 }
 
 #call-to {
@@ -42,11 +43,12 @@
     /*debug*/
     background-color: brown;
     height: 100%;
+    flex-shrink: 0;
+    min-width: 215px;
 }
 
 .row {
     display: flex;
-    gap:15px;
     width: 100%;
 }
 
@@ -56,16 +58,19 @@
     width: 100%;
     display: flex;
     margin-bottom: 250px;
+    gap:15px;
 }
 
 footer {
     /*debug*/
     background-color: aquamarine;
-    height: 90px;
+    min-height: 90px;
+    flex-shrink: 0;
 }
 
 .card {
     width: calc(100% / 6 - (20px / 6));
+    flex-shrink: 0;
 }
 
 img {
