inserisci altri elementi per provare restringimenti

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+}
+
 #wrapper {
     /*debug*/
     background-color: black;
@@ -20,16 +24,30 @@
     color: white;
 }
 
+#upgrade-btn {
+    padding: 10px;
+    color: white;
+    border-radius: 33px;
+    border: solid 1px white;
+}
+
 #call-to {
     /*debug*/
     height: 90px;
-    background-color: chartreuse;
+    background-color: #080B12;
+    display: flex;
+    justify-content: end;
+    align-items: center;
 }
 
 #genres {
     /*debug*/
     height: 45px;
-    background-color: lightblue
+    background-color: #141922;
+    display: flex;
+    justify-content: space-between;
+    width: 65%;
+    margin: 0 auto;
 }
 
 #content {
@@ -55,10 +73,9 @@
 
 .column {
     height: 175px;
-    background-color: blue;
     width: 100%;
     display: flex;
-    margin-bottom: 250px;
+    margin-bottom: 100px;
     gap:15px;
     flex-wrap: wrap;
 }
