--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@ a {
     color: white;
 }
 
+h3 {
+    margin-top: 68px;
+}
+
 #wrapper {
     /*debug*/
     background-color: black;
@@ -47,7 +51,7 @@ a {
 }
 
 #genres {
-    /*debug*/
+    padding-top: 30px;
     height: 45px;
     background-color: #141922;
     display: flex;
@@ -101,12 +105,34 @@ a {
 footer {
     display: flex;
     height: 90px;
-    background-color: #282828
+    background-color: #282828;
+}
+
+#left {
+    width: 23%;
+    height: 90px;
+    display: flex;
+    color: white;
+}
+
+#left img {
+    width: 42px;
+    height: 42px;
+}
+
+#mid {
+    width: 54%;
+    height: 90px;
+}
+
+#right {
+    width: 23%;
+    height: 90px;
 }
 
 #footer-container {
     /*debug*/
-    
+    display: flex;
     min-height: 90px;
     flex-shrink: 0;
     width: 100%;
@@ -124,5 +150,10 @@ img {
 @media screen and (max-width: 878px) {
     .card {
         width: calc(100% / 4 - (60px / 4));
+    }
+
+    .row {
+        margin-top: 50px;
+        margin-bottom: 50px;
     }
 }
