--- a/css/main.css
+++ b/css/main.css
@@ -30,8 +30,7 @@ h3 {
     color: white;
 }
 
-#main span,
-#main a {
+.gray-text {
     color: #7D7F84;
 }
 
@@ -96,21 +95,24 @@ h3 {
     display: flex;
     /*debug*/
     background-color: #080B12;
-    height: 100%;
+    height: 300px;
     flex-shrink: 0;
     min-width: 215px;
     color: white;
     flex-direction: column;
-    justify-content: space-between;
-}
-
-#menu * {
-    margin-bottom: 5px;
 }
 
 #menu-list img {
     width: 30px;
     height: 30px;
+}
+
+#profile-area {
+    padding-top: 60px;
+}
+
+#profile-area img {
+    width: 30px;
 }
 
 #menu-list {
