--- a/css/main.css
+++ b/css/main.css
@@ -95,11 +95,12 @@ h3 {
     display: flex;
     /*debug*/
     background-color: #080B12;
-    height: 300px;
+    height: 100%;
     flex-shrink: 0;
     min-width: 215px;
     color: white;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 #menu-list img {
@@ -107,16 +108,11 @@ h3 {
     height: 30px;
 }
 
-#profile-area {
-    padding-top: 60px;
-}
+
+
 
 #profile-area img {
     width: 30px;
-}
-
-#menu-list {
-    margin-bottom: 150px;
 }
 
 
@@ -145,6 +141,11 @@ footer {
     height: 90px;
     display: flex;
     color: white;
+    align-items: center;
+}
+
+footer i {
+    color: white;
 }
 
 #left img {
@@ -155,6 +156,8 @@ footer {
 #mid {
     width: 54%;
     height: 90px;
+    display: flex;
+    flex-direction: column;
 }
 
 #right {
@@ -168,6 +171,12 @@ footer {
     min-height: 90px;
     flex-shrink: 0;
     width: 100%;
+}
+
+#mid {
+    display: flex;
+    color: white;
+    justify-content: space-evenly;
 }
 
 .card {
