aggiungi alcuni elementi di hover

--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,14 @@ ul {
     color: #7D7F84;
 }
 
+a:hover {
+    color: white;
+}
+
+#playlist a:hover {
+    color: white;
+}
+
 #plus-icon {
     font-size: 30px;
 }
