--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,12 @@ a {
 
 h3 {
     margin-top: 68px;
+    font-size: 22px;
+    margin-bottom: 25px;
+}
+
+.round-box {
+    border-radius: 50%;
 }
 
 #wrapper {
