--- a/css/main.css
+++ b/css/main.css
@@ -235,6 +235,18 @@ img {
 
     .row {
         margin-top: 50px;
-        margin-bottom: 50px;
+        margin-bottom: 150px;
     }
+}
+
+@media screen and (max-width: 640px) {
+    .card {
+        width: calc(100% / 2 - (60px / 2));;
+    }
+
+    .row {
+        margin-top: 50px;
+        margin-bottom: 350px;
+    }
+
 }
