migliora sezione call to action (bootone)

--- a/css/main.css
+++ b/css/main.css
@@ -41,15 +41,20 @@ h3 {
     color: white;
 }
 
+#green-border {
+    border-bottom: 3px solid green;
+}
+
 .gray-text {
     color: #7D7F84;
 }
 
 #upgrade-btn {
-    padding: 10px;
+    padding: 12px;
     color: white;
     border-radius: 33px;
     border: solid 1px white;
+    font-size: 10px;
 }
 
 #logo-box {
