--- a/css/main.css
+++ b/css/main.css
@@ -341,6 +341,12 @@ img {
     background-color: gray;
 }
 
+.inner-progression {
+    width: 24%;
+    height: 3px;
+    background-color: #C1C1C1;
+}
+
 @media screen and (max-width: 878px) {
     .card {
         width: calc(100% / 4 - (60px / 4));
