inserisci pallino indicatore in traccia e volume

--- a/css/main.css
+++ b/css/main.css
@@ -333,10 +333,13 @@ img {
     width: 80%;
     height: 3px;
     background-color: gray;
+    display: flex;
+    
+    
 }
 
 #small-track {
-    width: 20%;
+    width: 40%;
     height: 3px;
     background-color: gray;
 }
@@ -345,6 +348,29 @@ img {
     width: 24%;
     height: 3px;
     background-color: #C1C1C1;
+    position: relative;
+}
+
+.marker {
+    height: 13px;
+    width: 13px;
+    background-color: white;
+    border-radius: 33px;
+    position: absolute;
+    top:1px;
+    right:-7px;
+    transform: translate(-50%, -50%);
+    display: none;
+}
+
+#inner-track:hover .inner-progression,
+#small-track:hover .inner-progression {
+    background-color: green;
+}
+
+#inner-track:hover .marker,
+#small-track:hover .marker {
+    display: block;
 }
 
 @media screen and (max-width: 878px) {
