--- a/css/main.css
+++ b/css/main.css
@@ -159,13 +159,25 @@ a:hover {
     color: white;
 }
 
+#plus-row-wrapper:hover {
+    color:white;
+}
+
+#plus-row-wrapper:hover #plus-wrapper{
+    background-color:white;
+}
+
 #playlist a:hover {
     color: white;
 }
 
 #plus-icon {
     font-size: 30px;
+    color: black;
+    padding-left: 5px;
+    margin-top: 5px;
 }
+
 
 .card-pics {
     position: relative;
@@ -295,7 +307,18 @@ footer i {
     text-align: center;
 }
 
+#plus-wrapper {
+    background-color: #A3A3A3;
+    width: 40px;
+    height: 40px;
+    
+}
 
+#plus-row-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
 
 img {
     max-width: 100%;
@@ -411,7 +434,7 @@ img {
 
 @media screen and (max-width: 552px) {
     .hide-text {
-        display: none;
+        display: none !important; /*risolvi*/
     }
 
     #menu {
