--- a/css/main.css
+++ b/css/main.css
@@ -34,9 +34,7 @@ h3 {
 }
 
 #main {
-    flex-grow: 1;
     background-color: #141922;
-    flex-shrink: 1;
     color: white;
 }
 
@@ -50,20 +48,14 @@ h3 {
 
 #upgrade-btn {
     padding: 12px;
-    color: white;
     border-radius: 33px;
     border: solid 1px white;
     font-size: 10px;
 }
 
-#logo-box {
-    height: 90px;
-    width: 100%;
-}
-
 #big-logo{
     width: 130px;
-    margin-top: 40px;
+    margin-top: 25px;
 }
 
 #small-logo {
@@ -87,19 +79,12 @@ ul {
 
 #genres {
     padding-top: 30px;
-    height: 45px;
     background-color: #141922;
     display: flex;
     justify-content: space-between;
     width: 60%;
     margin: 0 auto;
     flex-wrap: wrap;
-    font-size: 10px;
-    line-height: 35px;
-}
-
-#genres * {
-    flex-shrink: 0;
 }
 
 #content {
@@ -110,17 +95,14 @@ ul {
 }
 
 #menu {
-    width: 230px;
     display: flex;
     /*debug*/
     background-color: #080B12;
-    height: 100%;
-    flex-shrink: 0;
     min-width: 215px;
     color: white;
     flex-direction: column;
     justify-content: space-between;
-    margin-left: 20px;
+    padding-left: 20px;
 }
 
 #menu-list {
@@ -129,7 +111,6 @@ ul {
 
 #menu-list img {
     width: 25px;
-    height: 25px;
 }
 
 #playlist {
@@ -137,18 +118,11 @@ ul {
 }
 
 #playlist *{
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 #playlist a {
     color: #7D7F84;
-}
-
-#main-hr {
-    width: 95%;
-    margin: 0 auto;
-    color: #808080;
-    height: 1px;
 }
 
 #install-btn{
