--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,11 @@ h3 {
     font-size: 10px;
 }
 
+#upgrade-btn:hover {
+    padding: 15px;
+    font-size: 11px;
+}
+
 #big-logo{
     width: 130px;
     margin-top: 25px;
