--- a/css/main.css
+++ b/css/main.css
@@ -287,6 +287,10 @@ footer i {
     text-align: center;
 }
 
+#home-btn {
+    border-left: solid 3px green;
+}
+
 #plus-wrapper {
     background-color: #A3A3A3;
     width: 40px;
