--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,11 @@ h3 {
     border-radius: 50%;
 }
 
+#menu li {
+    display: flex;
+    align-items: center;
+}
+
 #wrapper {
     /*debug*/
     background-color: black;
@@ -122,7 +127,7 @@ ul {
 }
 
 #playlist *{
-    margin-bottom: 15px;
+    margin-bottom: 8px;
 }
 
 #playlist a {
@@ -286,7 +291,9 @@ footer i {
 }
 
 #home-btn {
-    border-left: solid 3px #ADFF2F;
+    height: 30px;
+    background-color: #ADFF2F;
+    width: 2px;
 }
 
 #plus-wrapper {
