--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,12 @@ h3 {
 }
 
 #green-border {
-    border-bottom: 3px solid #ADFF2F;
+    background-color: #ADFF2F;
+    height: 3px;
+    width: 50px;
+    position: absolute;
+    bottom: -5px;
+    left: 13px
 }
 
 .gray-text {
@@ -99,6 +104,7 @@ h3 {
     margin: 0 auto;
     flex-wrap: wrap;
     margin-top: 90px;
+    position: relative;
 }
 
 #content {
@@ -322,6 +328,8 @@ footer i {
     height: 30px;
     background-color: #ADFF2F;
     width: 2px;
+    position: absolute;
+    left: 0;
 }
 
 #plus-wrapper {
@@ -471,6 +479,7 @@ img {
     #menu {
         width: 48px;
         min-width: 56px;
+        position: relative;
     }
 
     #profile-area {
